samples/_failures_safe/1761641884_0388c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca8fe56b.c: In function ‘main’:
./samples/SAFE/__tmp_ca8fe56b.c:144:5: error: expected expression at end of input
  144 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_ca8fe56b.c:144:5: error: expected declaration or statement at end of input
